finalised colour scheme and logo

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,7 @@
 .App {
   font-family: "Alexandria", sans-serif;
   min-height: 100vh;
-  background-color: black;
+  background-color: #2D3142;
+  /* background-color: #BFC0C0; */
 }
 
