--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,38 +1,24 @@
 .NavBar {
-  background-color: #248232;
+  background-color: #2D3142;
 }
 
 * {
   box-sizing: border-box;
 }
 
-a {
-  color: black;
+/* a {
+  color: #BFC0C0;
   transition: color ease-in-out 0.5s;
-}
+} */
 
-a:hover i {
-  color: white;
-  transition: color ease-in-out 0.5s;
-}
 
 i {
-  color: black;
+  color: #BFC0C0;
   font-size: 1.6rem;
   padding: 5px;
   vertical-align: middle;
 }
 
-i:hover {
-  transition: color ease-in-out 0.5s;
-  color: white;
-}
-
 span {
-  color: black;
-}
-
-span:hover {
-  transition: color ease-in-out 0.5s;
-  color: black;
+  color: #BFC0C0;
 }
