added Create page user can upload photo and input title and content, will style more eventually

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,3 +12,13 @@
 .Content {
   text-align: -webkit-center;
 }
+
+.Image {
+  max-height: 40vh;
+  max-width: 100%;
+  object-fit: contain;
+}
+
+input[type="file"] {
+  display: none;
+}
