--- a/src/styles/Buttons.module.css
+++ b/src/styles/Buttons.module.css
@@ -2,30 +2,51 @@
   font-size: 0.8rem;
   border-color: transparent;
   color: black;
-  background-color: #bfc0c0;
   text-transform: uppercase;
   font-weight: bold;
   padding: 4px 10px;
   margin-left: 10px;
   margin-right: 10px;
   min-width: 75px;
-  background: rgba(255, 255, 255, 0.15);
+  background: rgba(0, 0, 0, 0);
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgb(0 0 0 / 10%);
-  backdrop-filter: blur(9.8px);
-  border: 1px solid rgba(255, 255, 255, 0.4);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10.2px);
+  -webkit-backdrop-filter: blur(10.2px);
 }
 
+/* From https://css.glass */
+/* background: rgba(203, 45, 62, 0);
+border-radius: 16px;
+box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+backdrop-filter: blur(10.2px);
+-webkit-backdrop-filter: blur(10.2px);
+border: 1px solid rgba(203, 45, 62, 0.49); */
+
+/* background: #e0e0e0;
+box-shadow: inset 20px 20px 60px #bebebe,
+            inset -20px -20px 60px #ffffff; */
+
 .Button:hover {
-  opacity: 0.8;
+  color: black;
+  background: linear-gradient(315deg, #cacaca, #f0f0f0);
+  border-radius: 16px;
   border-color: transparent;
-  cursor: pointer;
-  background-color: black;
-  color: white;
+  box-shadow: -4px -4px 8px #cacaca, 4px 4px 8px #f6f6f6;
+  backdrop-filter: blur(10.2px);
+  -webkit-backdrop-filter: blur(10.2px);
+  border: 1px solid rgba(203, 45, 62, 0.1);
 }
 
 .Button:hover:active {
-  background-color: black !important;
+  color: black;
+  background: linear-gradient(315deg, #cacaca, #f0f0f0);
+  border-radius: 16px;
+  border-color: transparent;
+  box-shadow: -4px -4px 8px #cacaca, 4px 4px 8px #f6f6f6;
+  backdrop-filter: blur(10.2px);
+  -webkit-backdrop-filter: blur(10.2px);
+  border: 1px solid rgba(203, 45, 62, 0.1);
 }
 
 .Button:active {
