--- a/src/styles/SignUp.module.css
+++ b/src/styles/SignUp.module.css
@@ -20,6 +20,17 @@
   margin: auto;
 }
 
+.Container {
+  /* From https://css.glass */
+  background: rgba(203, 45, 62, 0);
+  border-radius: 16px;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(10.2px);
+  -webkit-backdrop-filter: blur(10.2px);
+  border: 1px solid rgba(203, 45, 62, 0.1);
+  text-align: -webkit-center;
+}
+
 .Link span {
   color: #fb6107;
 }
@@ -37,9 +48,9 @@
 }
 
 a {
-   color: black;
+  color: black;
 }
 
 a:hover {
-   color: #3c4e5a;
+  color: #3c4e5a;
 }
