--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -15,13 +15,13 @@ h5 {
 }
 
 .Heart {
-  color: #3c4e5a;
+  color: red;
 }
 
 .Heart:hover {
-  color: white;
+  color: #3c4e5a;
 }
 
 .HeartOutline:hover {
-  color: #3c4e5a;
+  color: red;
 }
