--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,6 +1,6 @@
 .NavBar {
   /* From https://css.glass */
-  background: rgba(203, 45, 62, 0);
+  background: white;
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10.2px);
   -webkit-backdrop-filter: blur(10.2px);
