--- a/src/styles/NavBar.module.css
+++ b/src/styles/NavBar.module.css
@@ -1,5 +1,5 @@
 .NavBar {
-  background: white;
+  background: rgba(255 255 255 / 50%);
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10.2px);
   -webkit-backdrop-filter: blur(10.2px);
