removed shadow from post cards

--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -1,13 +1,11 @@
 .Post {
   min-height: 350px;
-  /* From https://css.glass */
   background: rgba(203, 45, 62, 0);
   border-radius: 16px;
-  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10.2px);
   -webkit-backdrop-filter: blur(10.2px);
-  border: 1px solid rgba(203, 45, 62, 0.1);
-  margin-bottom: 10px;
+  border: 1px solid rgb(211 216 222);
+  margin-bottom: 20px;
 }
 
 .Post figure,
