--- a/src/styles/PostCreateEditForm.module.css
+++ b/src/styles/PostCreateEditForm.module.css
@@ -7,4 +7,5 @@
   backdrop-filter: blur(10.2px);
   -webkit-backdrop-filter: blur(10.2px);
   border: 1px solid rgba(203, 45, 62, 0.1);
+  margin-bottom: 20px;
 }
