--- a/src/styles/SignUp.module.css
+++ b/src/styles/SignUp.module.css
@@ -27,7 +27,7 @@
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(10.2px);
   -webkit-backdrop-filter: blur(10.2px);
-  border: 1px solid rgba(203, 45, 62, 0.1);
+  border: 1px solid rgb(211 216 222);
   text-align: -webkit-center;
 }
 
