--- a/src/styles/Post.module.css
+++ b/src/styles/Post.module.css
@@ -5,7 +5,8 @@
   backdrop-filter: blur(10.2px);
   -webkit-backdrop-filter: blur(10.2px);
   border: 1px solid rgb(211 216 222);
-  margin-bottom: 20px;
+  margin-bottom: 2em;
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 }
 
 .Post figure,
