--- a/src/styles/CommentCreateEditForm.module.css
+++ b/src/styles/CommentCreateEditForm.module.css
@@ -6,6 +6,7 @@
   border: 1px solid rgb(211 216 222);
   padding: 1em;
   box-shadow: 0 4px 30px rgb(0 0 0 / 10%);
+  margin-bottom: 1em;
 }
 
 .Comment {
