--- a/src/styles/ProfilePage.module.css
+++ b/src/styles/ProfilePage.module.css
@@ -21,3 +21,9 @@
   box-shadow: 0 4px 30px rgb(0 0 0 / 10%);
   padding: 1em;
 }
+
+.NoResults {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
